2007-09-15  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildCmdMkpatchMain): Force unapplying local patches, no
	matter what while taking the diff.
	(CygbuildPatchApplyMaybe): Added call argument modifiers options
	'-force', '-quiet' and '-nostat'.
	(CygbuildPatchCheck): Removed message that lists applied
	patches.
	(CygbuildPatchListDisplay): New.
	(CygbuildCommandMain::patch-check): Call `CygbuildPatchListDisplay'.

2007-09-14  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::OPTIONS): Document new option --bzip2.

	* etc/etc/programs.conf (GREP): Changed --extended-regexp
	to --perl-regexp. Needed for TAB \t in regexps.

	* bin/cygbuild.sh:
	- Check CYGWIN-PATCHES/* for trailing whitespace.
	- Shorted many messages relative to srcdir.
	(CygbuildCygcheckMain): Renamed. Was
	`CygbuildCygcheck'.
	(CygbuildCygcheckLibraryDepMain): Exit immediately if
	no library dependencies found.
	(CygbuildCmdInstallCheckSymlinkExe): Renamed. Was
	`CygbuildCmdInstallSymlinkExe'.
	(CygbuildCmdInstallCheckCygpatchDirectory): New.
	(CygbuildCmdInstallCheckMain): Use
	`CygbuildCmdInstallCheckTrailingWspc'.
	(CygbuildPatchApplyRun): Improved handling of additional options
	by using $@.
	(CygbuildPatchApplyMaybe): Improved patch/unpatch and error
	checking in case the commands were called multiple times.
	Show the full patch command only if --verbose is set.
	(CygbuildCmdInstallCheckDirStructure): Changer ERROR
	to WARN if /bin was found.
	(CygbuildInstallExtraManual): The *.N.pod pages are converted
	into *.N. Delete these generated pages after the install.
	(CygbuildCmdInstallCheckCygpatchDirectory): Display file in error:
	Possible unfilled template line
	(CygbuildCmdInstallCheckSymlinks): Fix iWARN indentation: 2 more
	spaces to the right.
	(CygbuildCmdInstallCheckCygpatchDirectory): Adjust 'your name'
	regexp by leaving out [<] test.
	(CygbuildInstallPackageDocs): Adjust indentation of message
	'Fixing permission'